add html for about-us

--- a/index.html
+++ b/index.html
@@ -28,17 +28,85 @@
             <h1>Plan. Create.</h1>
             <h1>Organize.</h1>
             <h3>Welcome to the new you</h3>
+
+            <figure class="bannerBtns">
+                <a href="">
+                    <img src="img/googlePlay.svg" alt="bannerImg Google Play">
+                </a>
+                <a href="">
+                    <img src="img/appStore.svg" alt="bannerImg App Store">
+                </a>
+            </figure>
         </div>
 
         <figure>
-            <a href="">
-                <img src="img/googlePlay.svg" alt="bannerImg Google Play">
-            </a> 
-            <a href="">
-                <img src="img/appStore.svg" alt="bannerImg App Store">
-            </a>
+            <img src="img/bannerBackgroundImg.svg" alt="banner BackgroundImg">
         </figure>
     </div>
+
+
+
+    <article>
+        <header>
+            <h2>Why You Should Join US</h2>
+            <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. <br>
+                Quod nostrum iure facilis aspernatur voluptate qui fuga eos debitis repellat.
+            </p>
+        </header>
+
+        <div>
+            <figure>
+                <img src="img/testIcon.svg" alt="">
+                <figcaption>Lorem ipsum dolor sit amet consectetur</figcaption>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.<br>
+                    suscipit, cum tempora quae doloribus dicta, voluptates dignissimos
+                </p>
+            </figure>
+            <figure>
+                <img src="img/testIcon.svg" alt="">
+                <figcaption>Lorem ipsum dolor sit amet consectetur</figcaption>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.<br>
+                    suscipit, cum tempora quae doloribus dicta, voluptates dignissimos
+                </p>
+            </figure>
+            <figure>
+                <img src="img/testIcon.svg" alt="">
+                <figcaption>Lorem ipsum dolor sit amet consectetur</figcaption>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.<br>
+                    suscipit, cum tempora quae doloribus dicta, voluptates dignissimos
+                </p>
+            </figure>
+            <figure>
+                <img src="img/testIcon.svg" alt="">
+                <figcaption>Lorem ipsum dolor sit amet consectetur</figcaption>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.<br>
+                    suscipit, cum tempora quae doloribus dicta, voluptates dignissimos
+                </p>
+            </figure>
+            <figure>
+                <img src="img/testIcon.svg" alt="">
+                <figcaption>Lorem ipsum dolor sit amet consectetur</figcaption>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.<br>
+                    suscipit, cum tempora quae doloribus dicta, voluptates dignissimos
+                </p>
+            </figure>
+            <figure>
+                <img src="img/testIcon.svg" alt="">
+                <figcaption>Lorem ipsum dolor sit amet consectetur</figcaption>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.<br>
+                    suscipit, cum tempora quae doloribus dicta, voluptates dignissimos
+                </p>
+            </figure>
+        </div>
+
+    </article>
 
 </body>
 
