add css and reset.less

--- a/index.html
+++ b/index.html
@@ -6,43 +6,47 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Page Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="css/index.css" />
     <script src="main.js"></script>
 </head>
 
 <body>
 
-    <header>
-        <nav>
-            <ul>
-                <li><a href=""><img src="" alt="lifeGPA-logo"></a></li>
-                <li><a href="">About us</a></li>
-                <li><a href="">Features</a></li>
-                <li><a href="">Contact US</a></li>
-            </ul>
-        </nav>
-    </header>
+    <section>
 
-    <div class="banner">
-        <div class="bannerText">
-            <h1>Plan. Create.</h1>
-            <h1>Organize.</h1>
-            <h3>Welcome to the new you</h3>
+        <header>
+            <nav>
+                <ul>
+                    <li><a href=""><img src="" alt="lifeGPA-logo"></a></li>
+                    <li><a href="">About us</a></li>
+                    <li><a href="">Features</a></li>
+                    <li><a href="">Contact US</a></li>
+                </ul>
+            </nav>
+        </header>
 
-            <figure class="bannerBtns">
-                <a href="">
-                    <img src="img/googlePlay.svg" alt="bannerImg Google Play">
-                </a>
-                <a href="">
-                    <img src="img/appStore.svg" alt="bannerImg App Store">
-                </a>
+        <article class="banner">
+            <div class="bannerText">
+                <h1>Plan. Create.</h1>
+                <h1>Organize.</h1>
+                <h3>Welcome to the new you</h3>
+
+                <figure class="bannerBtns">
+                    <a href="">
+                        <img src="img/googlePlay.svg" alt="bannerImg Google Play">
+                    </a>
+                    <a href="">
+                        <img src="img/appStore.svg" alt="bannerImg App Store">
+                    </a>
+                </figure>
+            </div>
+
+            <figure>
+                <img src="img/bannerBackgroundImg.svg" alt="banner BackgroundImg">
             </figure>
-        </div>
+        </article>
 
-        <figure>
-            <img src="img/bannerBackgroundImg.svg" alt="banner BackgroundImg">
-        </figure>
-    </div>
+    </section>
 
 
     <main>
@@ -108,7 +112,6 @@
             </div>
         </article>
 
-
         <article>
             <header>
                 <h2>
@@ -161,6 +164,7 @@
 
     </main>
 
+
     <section class="contactUs">
         <p>TRUSTED BY THE BEST</p>
         <figure>
@@ -184,6 +188,7 @@
             <button>GET STARTED</button>
         </div>
     </section>
+
 
     <footer>
         <div>
