add banner style

--- a/index.html
+++ b/index.html
@@ -12,214 +12,222 @@
 
 <body>
 
-    <section>
+    <div class="wrapper">
 
-        <header>
-            <nav>
-                <ul>
-                    <li><a href=""><img src="" alt="lifeGPA-logo"></a></li>
-                    <li><a href="">About us</a></li>
-                    <li><a href="">Features</a></li>
-                    <li><a href="">Contact US</a></li>
-                </ul>
-            </nav>
-        </header>
 
-        <article class="banner">
-            <div class="bannerText">
-                <h1>Plan. Create.</h1>
-                <h1>Organize.</h1>
-                <h3>Welcome to the new you</h3>
+        <section class="section1">
 
-                <figure class="bannerBtns">
-                    <a href="">
-                        <img src="img/googlePlay.svg" alt="bannerImg Google Play">
-                    </a>
-                    <a href="">
-                        <img src="img/appStore.svg" alt="bannerImg App Store">
-                    </a>
+            <header>
+                <nav>
+                    <figure>
+                            <a href=""><img src="img/lifeGpa.png" alt="lifeGPA-logo"></a>
+                    </figure>
+                    <ul>
+                        <li clas><a href="">About us</a></li>
+                        <li><a href="">Features</a></li>
+                        <li><a href="">Contact US</a></li>
+                    </ul>
+                </nav>
+            </header>
+
+            <article class="banner">
+                <div class="bannerText">
+                    <h1>Plan. Create.</h1>
+                    <h1>Organize.</h1>
+                    <h3>Welcome to the new you</h3>
+
+                    <figure class="bannerBtns">
+                        <a href="">
+                            <img src="img/googlePlay.svg" alt="bannerImg Google Play">
+                        </a>
+                        <a href="">
+                            <img src="img/appStore.svg" alt="bannerImg App Store">
+                        </a>
+                    </figure>
+                </div>
+
+                <figure class="bannerBackgroundImage">
+                    <img src="img/bannerBackgroundImg.svg" alt="banner BackgroundImg">
                 </figure>
-            </div>
+            </article>
 
+        </section>
+
+
+        <main>
+
+            <article>
+                <header>
+                    <h2>Why You Should Join US</h2>
+                    <p>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. <br>
+                        Quod nostrum iure facilis aspernatur voluptate qui fuga eos debitis repellat.
+                    </p>
+                </header>
+
+                <div>
+                    <figure>
+                        <img src="img/testIcon.svg" alt="">
+                        <figcaption>Lorem ipsum dolor sit amet consectetur</figcaption>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit.<br>
+                            suscipit, cum tempora quae doloribus dicta, voluptates dignissimos
+                        </p>
+                    </figure>
+                    <figure>
+                        <img src="img/testIcon.svg" alt="">
+                        <figcaption>Lorem ipsum dolor sit amet consectetur</figcaption>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit.<br>
+                            suscipit, cum tempora quae doloribus dicta, voluptates dignissimos
+                        </p>
+                    </figure>
+                    <figure>
+                        <img src="img/testIcon.svg" alt="">
+                        <figcaption>Lorem ipsum dolor sit amet consectetur</figcaption>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit.<br>
+                            suscipit, cum tempora quae doloribus dicta, voluptates dignissimos
+                        </p>
+                    </figure>
+                    <figure>
+                        <img src="img/testIcon.svg" alt="">
+                        <figcaption>Lorem ipsum dolor sit amet consectetur</figcaption>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit.<br>
+                            suscipit, cum tempora quae doloribus dicta, voluptates dignissimos
+                        </p>
+                    </figure>
+                    <figure>
+                        <img src="img/testIcon.svg" alt="">
+                        <figcaption>Lorem ipsum dolor sit amet consectetur</figcaption>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit.<br>
+                            suscipit, cum tempora quae doloribus dicta, voluptates dignissimos
+                        </p>
+                    </figure>
+                    <figure>
+                        <img src="img/testIcon.svg" alt="">
+                        <figcaption>Lorem ipsum dolor sit amet consectetur</figcaption>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit.<br>
+                            suscipit, cum tempora quae doloribus dicta, voluptates dignissimos
+                        </p>
+                    </figure>
+                </div>
+            </article>
+
+            <article>
+                <header>
+                    <h2>
+                        All Features <br>
+                        That You Need
+                    </h2>
+                </header>
+                <div>
+                    <aside>
+                        <div>
+                            <h3>Amazing Options</h3>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            </p>
+                        </div>
+                        <div>
+                            <h3>Amazing Options</h3>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            </p>
+                        </div>
+                    </aside>
+                    <figure>
+                        <img src="img/featuresImg.svg" alt="featuresImg">
+                    </figure>
+                    <aside>
+                        <div>
+                            <h3>Amazing Options</h3>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            </p>
+                        </div>
+                        <div>
+                            <h3>Amazing Options</h3>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            </p>
+                        </div>
+                    </aside>
+                </div>
+            </article>
+
+        </main>
+
+
+        <section class="contactUs">
+            <p>TRUSTED BY THE BEST</p>
             <figure>
-                <img src="img/bannerBackgroundImg.svg" alt="banner BackgroundImg">
+                <img src="" alt="designmodo">
+                <img src="" alt="envato">
+                <img src="" alt="Behance">
+                <img src="" alt="Google">
+                <img src="" alt="git">
             </figure>
-        </article>
 
-    </section>
+            <hr>
 
-
-    <main>
-
-        <article>
-            <header>
-                <h2>Why You Should Join US</h2>
-                <p>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. <br>
-                    Quod nostrum iure facilis aspernatur voluptate qui fuga eos debitis repellat.
-                </p>
-            </header>
-
-            <div>
-                <figure>
-                    <img src="img/testIcon.svg" alt="">
-                    <figcaption>Lorem ipsum dolor sit amet consectetur</figcaption>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit.<br>
-                        suscipit, cum tempora quae doloribus dicta, voluptates dignissimos
-                    </p>
-                </figure>
-                <figure>
-                    <img src="img/testIcon.svg" alt="">
-                    <figcaption>Lorem ipsum dolor sit amet consectetur</figcaption>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit.<br>
-                        suscipit, cum tempora quae doloribus dicta, voluptates dignissimos
-                    </p>
-                </figure>
-                <figure>
-                    <img src="img/testIcon.svg" alt="">
-                    <figcaption>Lorem ipsum dolor sit amet consectetur</figcaption>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit.<br>
-                        suscipit, cum tempora quae doloribus dicta, voluptates dignissimos
-                    </p>
-                </figure>
-                <figure>
-                    <img src="img/testIcon.svg" alt="">
-                    <figcaption>Lorem ipsum dolor sit amet consectetur</figcaption>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit.<br>
-                        suscipit, cum tempora quae doloribus dicta, voluptates dignissimos
-                    </p>
-                </figure>
-                <figure>
-                    <img src="img/testIcon.svg" alt="">
-                    <figcaption>Lorem ipsum dolor sit amet consectetur</figcaption>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit.<br>
-                        suscipit, cum tempora quae doloribus dicta, voluptates dignissimos
-                    </p>
-                </figure>
-                <figure>
-                    <img src="img/testIcon.svg" alt="">
-                    <figcaption>Lorem ipsum dolor sit amet consectetur</figcaption>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit.<br>
-                        suscipit, cum tempora quae doloribus dicta, voluptates dignissimos
-                    </p>
-                </figure>
-            </div>
-        </article>
-
-        <article>
-            <header>
-                <h2>
-                    All Features <br>
-                    That You Need
-                </h2>
-            </header>
-            <div>
-                <aside>
-                    <div>
-                        <h3>Amazing Options</h3>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        </p>
-                    </div>
-                    <div>
-                        <h3>Amazing Options</h3>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        </p>
-                    </div>
-                </aside>
-                <figure>
-                    <img src="img/featuresImg.svg" alt="featuresImg">
-                </figure>
-                <aside>
-                    <div>
-                        <h3>Amazing Options</h3>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        </p>
-                    </div>
-                    <div>
-                        <h3>Amazing Options</h3>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        </p>
-                    </div>
-                </aside>
-            </div>
-        </article>
-
-    </main>
-
-
-    <section class="contactUs">
-        <p>TRUSTED BY THE BEST</p>
-        <figure>
-            <img src="" alt="designmodo">
-            <img src="" alt="envato">
-            <img src="" alt="Behance">
-            <img src="" alt="Google">
-            <img src="" alt="git">
-        </figure>
-
-        <hr>
-
-        <h2>Let's Get in Touch</h2>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-        </p>
-        <div>
-            <input type="text" placeholder="Name">
-            <input type="email" name="" id="" placeholder="E-mail">
-            <button>GET STARTED</button>
-        </div>
-    </section>
-
-
-    <footer>
-        <div>
-            <img src="" alt="lifeGPA-logo">
-            <p>2019 LIfeGPA All Right Reserved</p>
-        </div>
-        <div>
-            <p>CONTACTS</p>
-            <address>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            </address>
-        </div>
-        <div>
-            <p>FOLLOW US</p>
-            <div>
-                <img src="" alt="twitter">
-                <img src="" alt="faceBook">
-                <img src="" alt="tumbler">
-                <img src="" alt="vineo">
-            </div>
-
-        </div>
-        <div>
-            <p>STUDIO</p>
+            <h2>Let's Get in Touch</h2>
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
             </p>
-        </div>
-    </footer>
+            <div>
+                <input type="text" placeholder="Name">
+                <input type="email" name="" id="" placeholder="E-mail">
+                <button>GET STARTED</button>
+            </div>
+        </section>
+
+
+        <footer>
+            <div>
+                <img src="" alt="lifeGPA-logo">
+                <p>2019 LIfeGPA All Right Reserved</p>
+            </div>
+            <div>
+                <p>CONTACTS</p>
+                <address>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                </address>
+            </div>
+            <div>
+                <p>FOLLOW US</p>
+                <div>
+                    <img src="" alt="twitter">
+                    <img src="" alt="faceBook">
+                    <img src="" alt="tumbler">
+                    <img src="" alt="vineo">
+                </div>
+
+            </div>
+            <div>
+                <p>STUDIO</p>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                </p>
+            </div>
+        </footer>
+
+
+    </div>
 </body>
 
 </html>
