--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
         <main>
 
-            <article>
+            <article class="mainArticle1">
                 <header>
                     <h2>Why You Should Join US</h2>
                     <p>
@@ -117,7 +117,7 @@
                 </div>
             </article>
 
-            <article>
+            <article class="mainArticle2">
                 <header>
                     <h2>
                         All Features <br>
