add contact and footer style

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <header>
                 <nav>
                     <figure>
-                            <a href=""><img src="img/lifeGpa.png" alt="lifeGPA-logo"></a>
+                        <a href=""><img src="img/lifeGpa.png" alt="lifeGPA-logo"></a>
                     </figure>
                     <ul>
                         <li clas><a href="">About us</a></li>
@@ -60,50 +60,53 @@
                 <header>
                     <h2>Why You Should Join US</h2>
                     <p>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. <br>
-                        Quod nostrum iure facilis aspernatur voluptate qui fuga eos debitis repellat.
+                        If you gave your life a grade right now, what would it be? <br>
+                        Not so sure? ... join us!
                     </p>
                 </header>
 
                 <div>
                     <figure>
                         <img src="img/testIcon.svg" alt="">
-                        <figcaption>Lorem ipsum dolor sit amet consectetur</figcaption>
+                        <figcaption>Ranking</figcaption>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit.<br>
-                            suscipit, cum tempora quae doloribus dicta, voluptates dignissimos
+                            How would you rank your combined efforts in all your different life categories, like personal development, professional goals, physical fitness, and relationship building?
+                        </p>
+                    </figure>
+                    <!-- <figure>
+                            <img src="img/testIcon.svg" alt="">
+                            <figcaption>Ranking</figcaption>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit.<br>
+                                suscipit, cum tempora quae doloribus dicta, voluptates dignissimos
+                            </p>
+                        </figure> -->
+                    <figure>
+                        <img src="img/testIcon.svg" alt="">
+                        <figcaption>Bad Habits</figcaption>
+                        <p>
+                                Make no mistake about it. Bad habits are called 'bad' for a reason. They kill our productivity and creativity. They slow us down. They hold us back from achieving our goals. And they're detrimental to our health.
+                            </p>
+                    </figure>
+                    <figure>
+                        <img src="img/testIcon.svg" alt="">
+                        <figcaption>Avoid Distractions</figcaption>
+                        <p>
+                                We're surrounded by distractions. Whether it's emails, phone calls, text messages, social media notifications, or people entering and leaving your workspace, those distractions end up eating a good portion of your time.
+                             </p>
+                    </figure>
+                    <figure>
+                        <img src="img/testIcon.svg" alt="">
+                        <figcaption>Procrastination</figcaption>
+                        <p>Procrastination doesn't work for everything. For instance, waiting to buy plane tickets at the last minute will typically end up costing you more.
+
                         </p>
                     </figure>
                     <figure>
                         <img src="img/testIcon.svg" alt="">
-                        <figcaption>Lorem ipsum dolor sit amet consectetur</figcaption>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit.<br>
-                            suscipit, cum tempora quae doloribus dicta, voluptates dignissimos
-                        </p>
-                    </figure>
-                    <figure>
-                        <img src="img/testIcon.svg" alt="">
-                        <figcaption>Lorem ipsum dolor sit amet consectetur</figcaption>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit.<br>
-                            suscipit, cum tempora quae doloribus dicta, voluptates dignissimos
-                        </p>
-                    </figure>
-                    <figure>
-                        <img src="img/testIcon.svg" alt="">
-                        <figcaption>Lorem ipsum dolor sit amet consectetur</figcaption>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit.<br>
-                            suscipit, cum tempora quae doloribus dicta, voluptates dignissimos
-                        </p>
-                    </figure>
-                    <figure>
-                        <img src="img/testIcon.svg" alt="">
-                        <figcaption>Lorem ipsum dolor sit amet consectetur</figcaption>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit.<br>
-                            suscipit, cum tempora quae doloribus dicta, voluptates dignissimos
+                        <figcaption>Failure isn't the end</figcaption>
+                        <p>While it's important to accept failure and not let it bog you down, it's also perfectly acceptable to get upset about it as long as you remember that failure is a stepping stone in your journey that is getting you to where you need to be.
+
                         </p>
                     </figure>
                     <figure>
@@ -173,11 +176,11 @@
         <section class="contactUs">
             <p>TRUSTED BY THE BEST</p>
             <figure>
-                <img src="" alt="designmodo">
-                <img src="" alt="envato">
-                <img src="" alt="Behance">
-                <img src="" alt="Google">
-                <img src="" alt="git">
+                <img src="img/Designmodo.svg" alt="designmodo">
+                <img src="img/Envato.svg" alt="envato">
+                <img src="img/Behance.svg" alt="Behance">
+                <img src="img/Google.svg" alt="Google">
+                <img src="img/Github.svg" alt="git">
             </figure>
 
             <hr>
@@ -187,7 +190,7 @@
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
             </p>
-            <div>
+            <div class="usersInfo">
                 <input type="text" placeholder="Name">
                 <input type="email" name="" id="" placeholder="E-mail">
                 <button>GET STARTED</button>
@@ -197,28 +200,30 @@
 
         <footer>
             <div>
-                <img src="" alt="lifeGPA-logo">
-                <p>2019 LIfeGPA All Right Reserved</p>
+                <img src="img/lifeGpa.png" alt="lifeGPA-logo">
+                <p>&copy 2019 LIfeGPA All Right Reserved</p>
             </div>
             <div>
-                <p>CONTACTS</p>
+                <p class="boldP">CONTACTS</p>
                 <address>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    </p>
                 </address>
             </div>
             <div>
-                <p>FOLLOW US</p>
-                <div>
-                    <img src="" alt="twitter">
-                    <img src="" alt="faceBook">
-                    <img src="" alt="tumbler">
-                    <img src="" alt="vineo">
+                <p class="boldP">FOLLOW US</p>
+                <div class="socialMedia">
+                    <img src="img/Twitter.svg" alt="twitter">
+                    <img class="fb" src="img/Facebook.svg" alt="faceBook">
+                    <img class="tbl" src="img/Tumblr.svg" alt="tumblr">
+                    <img src="img/Vimeo.svg" alt="vimeo">
                 </div>
 
             </div>
             <div>
-                <p>STUDIO</p>
+                <p class="boldP">STUDIO</p>
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     Lorem ipsum dolor sit amet consectetur adipisicing elit.
