--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
                 <div>
                     <figure>
-                        <img src="img/testIcon.svg" alt="">
+                        <!-- <img src="img/testIcon.svg" alt=""> -->
                         <figcaption>Ranking</figcaption>
                         <p>
                             How would you rank your combined efforts in all your different life categories, like personal development, professional goals, physical fitness, and relationship building?
@@ -82,40 +82,39 @@
                             </p>
                         </figure> -->
                     <figure>
-                        <img src="img/testIcon.svg" alt="">
+                        <!-- <img src="img/testIcon.svg" alt=""> -->
                         <figcaption>Bad Habits</figcaption>
                         <p>
                                 Make no mistake about it. Bad habits are called 'bad' for a reason. They kill our productivity and creativity. They slow us down. They hold us back from achieving our goals. And they're detrimental to our health.
                             </p>
                     </figure>
                     <figure>
-                        <img src="img/testIcon.svg" alt="">
+                        <!-- <img src="img/testIcon.svg" alt=""> -->
                         <figcaption>Avoid Distractions</figcaption>
                         <p>
                                 We're surrounded by distractions. Whether it's emails, phone calls, text messages, social media notifications, or people entering and leaving your workspace, those distractions end up eating a good portion of your time.
                              </p>
                     </figure>
                     <figure>
-                        <img src="img/testIcon.svg" alt="">
+                        <!-- <img src="img/testIcon.svg" alt=""> -->
                         <figcaption>Procrastination</figcaption>
                         <p>Procrastination doesn't work for everything. For instance, waiting to buy plane tickets at the last minute will typically end up costing you more.
 
                         </p>
                     </figure>
                     <figure>
-                        <img src="img/testIcon.svg" alt="">
+                        <!-- <img src="img/testIcon.svg" alt=""> -->
                         <figcaption>Failure isn't the end</figcaption>
                         <p>While it's important to accept failure and not let it bog you down, it's also perfectly acceptable to get upset about it as long as you remember that failure is a stepping stone in your journey that is getting you to where you need to be.
 
                         </p>
                     </figure>
                     <figure>
-                        <img src="img/testIcon.svg" alt="">
-                        <figcaption>Lorem ipsum dolor sit amet consectetur</figcaption>
+                        <!-- <img src="img/testIcon.svg" alt=""> -->
+                        <figcaption>Bussiness isn't Productivity</figcaption>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit.<br>
-                            suscipit, cum tempora quae doloribus dicta, voluptates dignissimos
-                        </p>
+                                Anyone who understands time management understands that being busy does not mean you are being productive. To be productive you need to be actively working at reaching all of your goals and doing so in a manner as efficient as possible.
+                            </p>
                     </figure>
                 </div>
             </article>
@@ -130,19 +129,15 @@
                 <div>
                     <aside>
                         <div>
-                            <h3>Amazing Options</h3>
+                            <h3>Calculates</h3>
                             <p>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                            </p>
+                                    The app evaluates the daily habits and rather than calculating streaks on a calendar, it calculates a percentage of times a certain habit has been done int he past 30, 60, or 90 days.
+                                </p>
                         </div>
                         <div>
-                            <h3>Amazing Options</h3>
-                            <p>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            <h3>Average  at a glance</h3>
+                            <p>An app designed to summarize your life’s most important efforts into a simple composite number. Then, it averages out all the habits' averages into one overall average. All you do is tell the app which habits you performed each day.
+
                             </p>
                         </div>
                     </aside>
@@ -151,19 +146,15 @@
                     </figure>
                     <aside>
                         <div>
-                            <h3>Amazing Options</h3>
-                            <p>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            <h3>Scale Up</h3>
+                            <p>There are so many productivity and habit tracking apps out there to measure progress in one area or another, but nothing that measures your overall life with a single metric.
+
                             </p>
                         </div>
                         <div>
                             <h3>Amazing Options</h3>
-                            <p>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            <p>Users create an account, log in, and tell the app a list of habits they want to track. There are both prompts to add habits to your list, and spots to write your own. The app evaluates the daily habits and rather than calculating streaks on a calendar.
+
                             </p>
                         </div>
                     </aside>
@@ -186,9 +177,8 @@
             <hr>
 
             <h2>Let's Get in Touch</h2>
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            <p>We're here to help and answer any question you might have. We look forward to hearing from you. <br>
+                <!-- For general inquiries check out our FAQ Page -->
             </p>
             <div class="usersInfo">
                 <input type="text" placeholder="Name">
@@ -207,9 +197,10 @@
                 <p class="boldP">CONTACTS</p>
                 <address>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    </p>
+                    Lambda <br>
+                     3a Ladoke Akintola Rd, <br>
+                         Ikeja GRA, <br>
+                         Ikeja </p>
                 </address>
             </div>
             <div>
@@ -225,8 +216,8 @@
             <div>
                 <p class="boldP">STUDIO</p>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Laura Martin Diogo <br>
+                    UX DESIGNER
                 </p>
             </div>
         </footer>
